--- a/Sprint4/tpn1-partials/src/views/addSuperhero.ejs
+++ b/Sprint4/tpn1-partials/src/views/addSuperhero.ejs
@@ -78,7 +78,7 @@
             <!-- Botón -->
             <div class="flex justify-end space-x-4">
                 <!-- Botón Volver -->
-                <a href="/dashboard" 
+                <a href="/" 
                    class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md shadow-md hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-300">
                     Volver
                 </a>
