--- a/Sprint5/Countries/src/views/index.ejs
+++ b/Sprint5/Countries/src/views/index.ejs
@@ -2,8 +2,9 @@
 <div class="text-center">
     <h1 class="text-4xl font-bold mb-4">Bienvenido a la Página Principal</h1>
     <img 
-      src="/images/marvel.png" 
-      alt="Superhéroe" 
-      class="mx-auto w-1/2 rounded-lg shadow-lg"
+      src="/images/paises.jpg" 
+      alt="Paises" 
+      class="mx-auto w-3/2 rounded-lg shadow-lg"
     />
   </div>
+  <br>
