--- a/Sprint5/Countries/src/views/partials/footer.ejs
+++ b/Sprint5/Countries/src/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="bg-gray-800 text-white py-4 text-center">
-    <p>&copy; Módulo 3 - EJS Layout p1 - by Nodo Tecnológico - 2024</p>
+    <p>&copy; Módulo 5 - Sprint 5 - by Nodo Tecnológico - 2024</p>
 </footer>
