--- a/Sprint5/Countries/src/views/partials/navbar.ejs
+++ b/Sprint5/Countries/src/views/partials/navbar.ejs
@@ -2,6 +2,6 @@
     <ul class="flex justify-around bg-blue-500 text-white py-3">
       <li><a href="/" class="hover:text-gray-300">Inicio</a></li>
       <li><a href="/countries" class="hover:text-gray-300">Lista de Paises</a></li>
-      <li><a href="/countries/agregar" class="hover:text-gray-300">Agregar SuperHéroe</a></li>
+      <li><a href="/countries/agregar" class="hover:text-gray-300">Agregar Paises</a></li>
     </ul>
   </nav>
